# gTile

./: .tsconfig-old.json  BUILD.bazel  WORKSPACE  package.json  tsconfig.json
src/: extension.js  extension.ts  gnome.js  gtile.js  gtile.ts  logging.js  main.ts  monitor.ts  settings.js  settings.ts
