package(default_visibility = ["//:__subpackages__"])

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
# load(":execute.bzl", "concat")

ts_library {
    name = "grids_lib",
    srcs = [
        "src/grids.ts"
    ],
}

ts_library {
    name = "gtile_lib",
    srcs = [
        "src/gtile.ts"
    ],
}